--- a/config.json
+++ b/config.json
@@ -1,6 +1,9 @@
 {
     "API_Mverse": "https://mverse-api.nexon.com/resource/v1/search",
-    "Input": "../data/input/input.txt",
-    "Equip_Output": "../data/output/equip.txt",
-    "Item_Output": "../data/output/item.txt"
+    "Input": "data/input/data.txt",
+    "Input_headers": "data/input/data.txt",
+    "Equip_Output": "data/output/equip.txt",
+    "Item_Output": "data/output/item.txt",
+    "Setup_Output": "data/output/setup.txt",
+    "Etc_Output": "data/output/etc.txt"
 }
